FullQa New/src/objects/Customer_Journey_Event__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Journey Events</relationshipLabel>
        <relationshipName>Customer_Journey_Events</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CaseSafeID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Journey Event CaseSafeID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Account_Statistics__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event Account Statistics</label>
        <referenceTo>Account_Statistics__c</referenceTo>
        <relationshipLabel>Customer Journey Events</relationshipLabel>
        <relationshipName>Customer_Journey_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Customer Journey Events</relationshipLabel>
        <relationshipName>Customer_Journey_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Connector__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event Connector</label>
        <referenceTo>Connector__c</referenceTo>
        <relationshipLabel>Customer Journey Events</relationshipLabel>
        <relationshipName>Customer_Journey_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Date__c</fullName>
        <label>Event Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Customer Journey Events</relationshipLabel>
        <relationshipName>Customer_Journey_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Tags__c</fullName>
        <label>Event Tags</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <label>Event Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Customer Journey Event</label>
    <nameField>
        <label>Customer Journey Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Journey Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>